Fix for Bug #9675 Auto-increment not working with INSERT..SELECT and NDB storage, post review fix